# degs-notes

./: 404.html  README.md  index.html  mkdocs.yml
2024/10/18/manage-settings-with-pydantic/: index.html
2024/10/25/create-a-comand-line-interface-in-few-minutes/: index.html
2025/05/11/how-to-create-an-azure-batchs-application-package-automatically/: index.html
about/: index.html
archive/2024/: index.html
archive/2025/: index.html
category/azure/: index.html
category/batch/: index.html
category/python/: index.html
category/validation/: index.html
code_examples/blob_downloader/: setup.cfg
code_examples/blob_downloader/blob_downloader/: cli.py  utils.py  version.py
code_examples/blob_downloader/src/: settings.py  utils.py
code_examples/command-line-interface-with-click/: setup.cfg
code_examples/command-line-interface-with-click/blob_downloader/: cli.py  cli_utils.py  settings.py
code_examples/create-a-blob-downloader/blob_downloader/: cli.py  settings.py  version.py
code_examples/create-a-blob-downloader/blob_downloader/drivers/: azure_blob.py  i_driver.py
code_examples/create-a-blob-downloader/tests/drivers/: azure_blob_test.py  conftest.py
code_examples/manage-settings-with-pydantic/: example.py
docs/: .authors.yml  about.md  index.md
docs/posts/: automatic-application-package-azure-batch.md  command-line-interfaces-with-click.md  hello-world.md  manage-settings-with-pydantic.md
docs/stylesheets/: extra.css
overrides/partials/: comments.html
search/: search_index.json
stylesheets/: extra.css
